cmake_minimum_required(VERSION 3.19)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm array-linkList-stack-queue/merge-sorted-array.cpp array-linkList-stack-queue/remove-duplicates-from-sorted-array.cpp array-linkList-stack-queue/move-zeroes.cpp array-linkList-stack-queue/reverse-linked-list.cpp array-linkList-stack-queue/reverse-nodes-in-k-group.cpp array-linkList-stack-queue/valid-parentheses.cpp array-linkList-stack-queue/min-stack.cpp)