cmake_minimum_required(VERSION 3.19)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm array-linkList-stack-queue/merge-sorted-array.cpp array-linkList-stack-queue/remove-duplicates-from-sorted-array.cpp array-linkList-stack-queue/move-zeroes.cpp array-linkList-stack-queue/reverse-linked-list.cpp array-linkList-stack-queue/reverse-nodes-in-k-group.cpp array-linkList-stack-queue/valid-parentheses.cpp array-linkList-stack-queue/min-stack.cpp array-linkList-stack-queue/evaluate-reverse-polish-notation.cpp array-linkList-stack-queue/basic-calculator-ii.cpp 前缀和-差分/range-sum-query-2d-immutable.cpp 前缀和-差分/corporate-flight-bookings.cpp 前缀和-差分/maximum-subarray.cpp)